# pocketsphinx-demo

./: .gitignore  README.md  pyproject.toml
src/test/: basic.py
